--- a/config.json
+++ b/config.json
@@ -6,21 +6,17 @@
 	"projects": {
 		"articles": {
 			"remote": "git@github.com:Perennials/articles.git",
-			"supportEmail": "your-email@example.com",
+			"supportEmail": "your-email2@example.com",
 			"branches": {
 				"master": {
-					"local": "/var/www/deploy/articles/master/",
-					"autosync": true,
-					"commandOnFinish": null,
-					"urlOnFinish": null,
-					"syncSubmodules": true
+					"local": "/var/www/deploy/articles/master/"
 				},
 				"old": {
 					"local": "/var/www/deploy/articles/old/",
-					"autosync": true,
-					"commandOnFinish": null,
-					"urlOnFinish": null,
-					"syncSubmodules": true
+					"autosync": false,
+					"commandOnFinish": "echo good",
+					"urlOnFinish": "http://google.com",
+					"syncSubmodules": false
 				}
 			}
 		}
